# vSLAM-course

./: .gitignore
Ch1/PA1/: homework.docx
Ch1/cmake_pratice/: CMakeLists.txt
Ch1/cmake_pratice/src/: CMakeLists.txt  hello.cpp
Ch2/: F0FB3E18.tmp  c11.txt  homework.docx
Ch2/homework/: CMakeLists.txt  main.cpp
Ch2/homework/c11/: CMakeLists.txt  main.cpp
Ch2/homework/matrix_decomposition/: CMakeLists.txt  main.cpp
Ch3/homework/L3/: CMakeLists.txt  calculate error  code.rar  homework.docx  homework2.docx  read_trajectory  xinxinxin-第三章作业.rar
Ch3/homework/L3/src/: draw_trajectory.cpp
Ch4/exercise/ceres/: CMakeLists.txt  ceresCurveFitting.cpp
Ch4/exercise/g2o/: CMakeLists.txt  g2oCurveFitting.cpp  main.cpp
Ch4/exercise/gaussiannewtown/: CMakeLists.txt  gaussNewton.cpp  gaussNewton_2.cpp
Ch4/homework/SLAM╡┌╦─╜▓╫ў╥╡╝░╫╩┴╧/L4/: 1DD52D91.tmp  code.rar  xinxinxin-第四章作业.rar  xinxinxin第四章作业.docx
Ch4/homework/SLAM╡┌╦─╜▓╫ў╥╡╝░╫╩┴╧/L4/code/: CMakeLists.txt  disparity.cpp  gaussnewton.cpp  undistort_image.cpp
Ch5/SLAM第五讲作业资料/L5/: FF7FFCC3.tmp  xinxinxin-第五章作业.docx
Ch5/SLAM第五讲作业资料/L5/code/: CMakeLists.txt  E2Rt.cpp  GN-BA.cpp  computeORB.cpp  jrajectory_aligment.cpp
Ch5/exercise/: CMakeLists.txt  epipolar_solution.cpp  orb_demo.cpp  orb_mannu.cpp  pose_estimation_3d2d.cpp  triangulation  triangulation.cpp
Ch6/SLAM╡┌┴∙╜▓╫ў╥╡╫╩┴╧/L6/: xinxinxin-第六章作业.rar  xinxinxin.docx
Ch6/SLAM╡┌┴∙╜▓╫ў╥╡╫╩┴╧/L6/code/: CMakeLists.txt  direct_method.cpp  optical_flow.cpp  optical_flow_disparity.cpp
Ch7/SLAM第七讲作业资料/L7/: .~lock.xinxinxin-第七章作业.docx#  xinxinxin-第七章作业.docx
Ch7/SLAM第七讲作业资料/L7/code/: CMakeLists.txt  bundle_adjustment_bal.cpp  directBA.cpp  directBA_bak.cpp
Ch7/SLAM第七讲作业资料/L7/code/Ch7/: Bundle_bal_result
