INCLUDE_DIRECTORIES(inlcude)

SET(LIB_HELLO_SRC hello.cpp)
SET(LIBRARY_OUT_PATH ${PROJECT_BINARY_DIR}/lib)

ADD_LIBRARY(hello SHARED ${LIB_HELLO_SRC})

INSTALL(TARGETS hello LIBRARY DESTINATION lib)
INSTALL(FILES ${PROJECT_SOURCE_DIR}/include/hello.h DESTINATION include)

SET(EXE_HELLO_SRC useHello.cpp)
set(CMAKE_BUILD_TYPE "Release")
ADD_EXECUTABLE(main ${EXE_HELLO_SRC})
TARGET_LINK_LIBRARIES(main hello)
